k8s/prometheus-federation/services/nginx-ingressclass.yml
# See: https://kubernetes.github.io/ingress-nginx/
# IngressClass is needed for k8s versions 1.22 and later.
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller 
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
