k8s/prometheus-federation/services/alertmanager-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9093'
  name: alertmanager-service
  namespace: default
spec:
  ports:
  - port: 9093
    protocol: TCP
    targetPort: 9093
  selector:
    # Pods with labels matching this key/value pair will be publically
    # accessible through the service IP and port.
    run: alertmanager-server
  sessionAffinity: None
  type: ClusterIP
