k8s/prometheus-federation/services/blackbox-public-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    # The grafana web server does not export any prometheus metrics.
    prometheus.io/scrape: 'false'
  name: blackbox-public-service
  namespace: default
spec:
  ports:
  - port: 9115
    protocol: TCP
    targetPort: 9115
  selector:
    # Pods with labels matching this key/value pair will be publically
    # accessible through the service IP and port.
    run: blackbox-server
  sessionAffinity: None
  # Use the same static IP as used for Prometheus.
  externalIPs:
    # Use the same IP as above, since we're on a different port.
    - 35.184.81.106
  type: ClusterIP
