k8s/prometheus-federation/services/cert-manager-service.yml
# This file is part of https://github.com/jetstack/cert-manager/releases/download/v0.11.0/cert-manager-no-webhook.yaml.
# The namespace has been changed to default to avoid issues with resources
# created in the wrong order (e.g. a deployment is created before the namespace exists.)
# Source: cert-manager/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cert-manager
  namespace: default
  labels:
    app: cert-manager
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/instance:  cert-manager
    app.kubernetes.io/managed-by: Tiller
    helm.sh/chart: cert-manager-v0.11.0
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9402
      targetPort: 9402
  selector:
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/instance:  cert-manager
