k8s/prometheus-federation/services/github-receiver-public-service.yml
apiVersion: v1
kind: Service
metadata:
  name: github-receiver-public-service
  namespace: default
spec:
  ports:
  - port: 9393
    protocol: TCP
    targetPort: 9393
  selector:
    # Pods with labels matching this key/value pair will be publically
    # accessible through the service IP and port.
    run: github-receiver
  sessionAffinity: None
  # Allocate a static IP manually in GCP console: Networking -> Load Balancing.
  externalIPs:
    - 35.184.81.106
  type: ClusterIP
