k8s/prometheus-federation/services/grafana-tls-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    # The grafana web server does not export any prometheus metrics.
    prometheus.io/scrape: 'false'
  name: grafana-tls-service
  namespace: default
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    # Pods with labels matching this key/value pair will be publically
    # accessible through the service IP and port.
    run: grafana-server
  sessionAffinity: None
  # Use the same static IP as used for Prometheus.
  type: NodePort
