k8s/prometheus-federation/services/kube-state-metrics-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  name: kube-state-metrics-service
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    # Pods with labels matching this key/value pair will be publically
    # accessible through the service IP and port.
    run: kube-state-metrics
  sessionAffinity: None
  type: ClusterIP
