k8s/prometheus-federation/services/oauth2-proxy.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    run: oauth2-proxy
  type: NodePort
