k8s/prometheus-federation/services/prometheus-public-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-public-service
  namespace: default
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    # Pods with labels matching this key/value pair will be publically
    # accessible through the service IP and port.
    run: prometheus-server
  sessionAffinity: None
  type: ClusterIP
