k8s/prometheus-federation/services/pushgateway-public-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pushgateway-public-service
  namespace: default
spec:
  ports:
  - port: 9091
    protocol: TCP
    targetPort: 9091
  selector:
    # Pods with labels matching this key/value pair will be publically
    # accessible through the service IP and port.
    run: pushgateway-server
  sessionAffinity: None
  type: ClusterIP
