k8s/prometheus-federation/services/reboot-api-tls-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  name: reboot-api-service
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    # Pods with labels matching this key/value pair will be publically
    # accessible through the service IP and port.
    run: reboot-api
  sessionAffinity: None
  type: LoadBalancer
