k8s/prometheus-federation/services/script-exporter.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  name: script-exporter
  namespace: default
spec:
  ports:
  - port: 9172
    protocol: TCP
    targetPort: 9172
  selector:
    run: script-exporter
  sessionAffinity: None
  type: ClusterIP
