k8s/prometheus-federation/services/snmp-exporter-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    # We scrape snmp exporter instances through the pod auto discovery.
    prometheus.io/scrape: 'false'
  name: snmp-exporter-service
  namespace: default
spec:
  ports:
  - port: 9116
    protocol: TCP
    targetPort: 9116
  selector:
    # Pods with labels matching this key/value pair will be publically
    # accessible through the service IP and port.
    run: snmp-exporter
  sessionAffinity: None
  type: ClusterIP
